// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartBadgeIcon stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 flex items-center justify-between gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shopping-cart size-5"
      data-testid="shopping-cart-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="21"
        r="1"
      />
      <circle
        cx="19"
        cy="21"
        r="1"
      />
      <path
        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
      />
    </svg>
  </div>
</div>
`;

exports[`CartBadgeIcon stories snapshot > WithItems story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 flex items-center justify-between gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shopping-cart size-5"
      data-testid="shopping-cart-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="21"
        r="1"
      />
      <circle
        cx="19"
        cy="21"
        r="1"
      />
      <path
        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
      />
    </svg>
    <span
      class="border py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90 absolute -top-1 -right-1 min-w-[18px] h-[18px] rounded-full px-1 text-xs font-medium flex items-center justify-center"
      data-slot="badge"
      data-testid="shopping-cart-badge"
    >
      5
    </span>
  </div>
</div>
`;

exports[`CartBadgeIcon stories snapshot > WithManyItems story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-8 flex items-center justify-between gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shopping-cart size-5"
      data-testid="shopping-cart-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="21"
        r="1"
      />
      <circle
        cx="19"
        cy="21"
        r="1"
      />
      <path
        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
      />
    </svg>
    <span
      class="border py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90 absolute -top-1 -right-1 min-w-[18px] h-[18px] rounded-full px-1 text-xs font-medium flex items-center justify-center"
      data-slot="badge"
      data-testid="shopping-cart-badge"
    >
      99
    </span>
  </div>
</div>
`;
